--- a/src/components/nothingFoundForm/nothingFoundForm.module.css
+++ b/src/components/nothingFoundForm/nothingFoundForm.module.css
@@ -3,7 +3,7 @@
 .wrapper {
   display: grid;
   grid-template-columns: 80%;
-  padding: $primary-padding-top-bottom;
+  padding: $primary-padding-top-bottom 0;
 }
 
 .form {
