--- a/src/pages/homePage/components/benefitsCards/benefitsCards.module.css
+++ b/src/pages/homePage/components/benefitsCards/benefitsCards.module.css
@@ -1,7 +1,7 @@
 @import "/src/styles/variables.modules.css";
 
 .wrapper {
-  padding: $primary-padding-top-bottom;
+  padding: $primary-padding-top-bottom 0;
 }
 
 .benefits-wrapper {
