--- a/src/pages/oneCompanyPage/oneCompanyPage.module.css
+++ b/src/pages/oneCompanyPage/oneCompanyPage.module.css
@@ -1,11 +1,12 @@
 @import "/src/styles/variables.modules.css";
 
 .container {
+  padding: $padding-top-bottom 0;
   margin: $primary-margin;
 }
 
 .companyName {
-  margin: 60px 0 40px;
+  margin-bottom: 40px;
   font-size: 46px;
   font-weight: 500;
   line-height: 78px;
