--- a/src/components/UI/hint/hintUI.module.css
+++ b/src/components/UI/hint/hintUI.module.css
@@ -3,8 +3,8 @@
 .hint {
   display: grid;
   grid-template-rows: 50% 50%;
-  max-width: 224px;
-  max-height: 160px;
+  width: 224px;
+  height: 160px;
   background: $hint-background;
   border-radius: 8px;
   box-shadow: $shadow-primary;
