--- a/src/components/searchComponent/components/additionalSearchInputs/additionalSearchInputs.module.css
+++ b/src/components/searchComponent/components/additionalSearchInputs/additionalSearchInputs.module.css
@@ -37,6 +37,18 @@
   color: $third-text-color;
 }
 
+.hint-container {
+  position: relative;
+}
+
+.hint {
+  position: absolute;
+}
+
+.hint-hide {
+  display: none;
+}
+
 @media screen and (max-width: $breakpoint-extra-large) {
   .additional-form {
     display: grid;
