BEAR-44 fix style

--- a/src/pages/FAQPage/FAQPage.module.css
+++ b/src/pages/FAQPage/FAQPage.module.css
@@ -26,8 +26,14 @@
 }
 
 .form {
-  width: 60%;
+  width: 40%;
   margin: 96px 0;
+}
+
+@media screen and (max-width: $breakpoint-extra-large) {
+  .form {
+    width: 60%;
+  }
 }
 
 @media screen and (max-width: $breakpoint-large) {
