BEAR-44 fix GetInTouchCard

--- a/src/components/header/headerBlock.module.css
+++ b/src/components/header/headerBlock.module.css
@@ -17,6 +17,12 @@
   margin: $primary-margin;
 }
 
+.becomePartner-burger-wrapper {
+  display: flex;
+  gap: 8px;
+  justify-content: end;
+}
+
 .logo-map {
   display: flex;
 }
