--- a/src/pages/productsPage/components/getInTouchCard/getInTouchCard.module.css
+++ b/src/pages/productsPage/components/getInTouchCard/getInTouchCard.module.css
@@ -48,18 +48,9 @@
 }
 
 .name {
+  display: block;
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
-  color: $primary-text-color;
-}
-
-.btn {
-  color: $secondary-text-color;
-}
-
-.btns {
-  display: flex;
-  flex-direction: column;
-  align-items: end;
+  color: $primary-btn-color;
 }
