--- a/src/components/navigation/navigationMenuMobile.module.css
+++ b/src/components/navigation/navigationMenuMobile.module.css
@@ -26,7 +26,7 @@
   width: 220px;
   height: 100vh;
   padding-top: 100px;
-  background-color: $third-background;
+  background-color: $primary-background;
   box-shadow: $shadow-primary;
 }
 
@@ -46,7 +46,7 @@
 
 .item-link {
   width: 100%;
-  height: 100%;
+  height: max-content;
   color: $primary-text-color;
 }
 
@@ -57,8 +57,13 @@
   justify-content: flex-end;
 }
 
-.btn {
+.btn-icon {
   width: max-content;
+  height: max-content;
+}
+
+.btn {
+  justify-content: flex-start;
   height: max-content;
 }
 
@@ -79,12 +84,31 @@
   bottom: 0;
   left: 0;
   z-index: $z-index-default;
-  background-color: $secondary-text-color;
-  opacity: 0.2;
+  background-color: $primary-color;
+  opacity: 0.4;
 }
 
 .opacity-block-hide {
   display: none;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.become-partner-btn {
+  padding: 16px;
+  color: $primary-btn-color;
+}
+
+.becomePartner-burger-wrapper {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  justify-content: end;
 }
 
 @media screen and (max-width: $breakpoint-small) {
