--- a/src/pages/companiesPage/companiesPage.module.css
+++ b/src/pages/companiesPage/companiesPage.module.css
@@ -6,8 +6,7 @@
 }
 
 .header {
-  padding: 12px 0;
-  margin-bottom: 56px;
+  margin-bottom: 22px;
   font-size: 64px;
   font-weight: 500;
   line-height: 78px;
@@ -34,10 +33,38 @@
   .container {
     margin: $secondary-margin;
   }
+
+  .header {
+    margin-bottom: 16px;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 40px;
+  }
+
+  .quantities {
+    font-size: 28px;
+    line-height: 28px;
+    color: $primary-btn-color;
+  }
 }
 
 @media screen and (max-width: $breakpoint-small) {
   .container {
     margin: $mobile-margin;
+  }
+}
+
+@media screen and (max-width: $breakpoint-extra-small) {
+  .header {
+    margin-bottom: 12px;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 32px;
+  }
+
+  .quantities {
+    font-size: 24px;
+    line-height: 24px;
+    color: $primary-btn-color;
   }
 }
