--- a/src/components/nothingFoundForm/nothingFoundForm.module.css
+++ b/src/components/nothingFoundForm/nothingFoundForm.module.css
@@ -3,28 +3,11 @@
 .wrapper {
   display: grid;
   grid-template-columns: 80%;
-  padding: $primary-padding-top-bottom 0;
 }
 
 .form {
   display: flex;
   flex-direction: column;
-}
-
-.title {
-  max-width: 736px;
-  margin-bottom: 16px;
-  font-size: 36px;
-  font-weight: 500;
-  line-height: 40px;
-  color: $primary-text-color;
-}
-
-.sub-title {
-  max-width: 560px;
-  font-size: 20px;
-  line-height: 24px;
-  color: $primary-text-color;
 }
 
 .contacts-and-form {
@@ -121,6 +104,11 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+  }
+
+  .contacts-data {
+    font-size: 16px;
+    line-height: 20px;
   }
 
   .phone {
