--- a/src/pages/becomePartnerPage/components/priceCard/priceCard.module.css
+++ b/src/pages/becomePartnerPage/components/priceCard/priceCard.module.css
@@ -29,9 +29,6 @@
   flex-direction: column;
   gap: 16px;
   justify-content: center;
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 24px;
 }
 
 .default-color {
@@ -42,23 +39,8 @@
   color: $primary-btn-color;
 }
 
-.bottom-card-text {
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 24px;
-}
-
 .title {
-  font-size: 40px;
-  font-weight: 500;
-  line-height: 48px;
-}
-
-.price {
-  margin-bottom: 36px;
-  font-size: 26px;
-  font-weight: 500;
-  line-height: 32px;
+  margin-bottom: 0;
 }
 
 .text {
