--- a/src/pages/homePage/components/benefitsCard/benefitsCard.module.css
+++ b/src/pages/homePage/components/benefitsCard/benefitsCard.module.css
@@ -25,9 +25,18 @@
   font-size: 20px;
   font-weight: 500;
   line-height: 24px;
-  color: $primary-text-color;
 }
 
-.sub-title {
-  color: $primary-text-color;
+@media screen and (max-width: $breakpoint-extra-small) {
+  .title {
+    margin-bottom: 16px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+  }
+
+  .sub-title {
+    font-size: 16px;
+    line-height: 16px;
+  }
 }
