--- a/src/pages/productsPage/components/getInTouchCard/getInTouchCard.module.css
+++ b/src/pages/productsPage/components/getInTouchCard/getInTouchCard.module.css
@@ -31,6 +31,7 @@
 .phone,
 .email {
   display: inline-block;
+  padding-bottom: 12px;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
@@ -53,4 +54,13 @@
   font-weight: 400;
   line-height: 16px;
   color: $primary-btn-color;
+}
+
+@media screen and (max-width: $breakpoint-extra-small) {
+  .phone,
+  .email {
+    display: inline-block;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
