--- a/src/pages/becomePartnerPage/becomePartnerPage.module.css
+++ b/src/pages/becomePartnerPage/becomePartnerPage.module.css
@@ -1,8 +1,9 @@
 @import "/src/styles/variables.modules.css";
 
 .container {
-  display: grid;
-  gap: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: $big-components-gap;
   padding: $padding-top-bottom  $primary-padding-left-right;
   background-color: $third-background;
 }
@@ -13,14 +14,12 @@
 
 .form {
   max-width: 50%;
-  margin-top: 120px;
 }
 
 .price-cards {
   display: flex;
   flex-direction: row;
   gap: 36px;
-  margin: 80px 0;
 }
 
 @media screen and (max-width: $breakpoint-large) {
@@ -30,10 +29,6 @@
 
   .form {
     max-width: 60%;
-  }
-
-  .price-cards {
-    margin: 80px 0;
   }
 }
 
@@ -50,16 +45,12 @@
     display: flex;
     flex-direction: column;
     gap: 36px;
-    margin: 60px 0;
   }
 }
 
 @media screen and (max-width: $breakpoint-extra-small) {
   .container {
+    gap: $medium-components-gap;
     padding: $primary-padding-top-bottom $mobile-padding-left-right;
-  }
-
-  .price-cards {
-    margin: 40px 0;
   }
 }
