--- a/src/pages/becomePartnerPage/becomePartnerPage.module.css
+++ b/src/pages/becomePartnerPage/becomePartnerPage.module.css
@@ -34,7 +34,7 @@
 
 @media screen and (max-width: $breakpoint-small) {
   .container {
-    padding: $primary-padding-top-bottom $secondary-padding-left-right;
+    padding: $padding-top-bottom $secondary-padding-left-right;
   }
 
   .form {
@@ -51,6 +51,6 @@
 @media screen and (max-width: $breakpoint-extra-small) {
   .container {
     gap: $medium-components-gap;
-    padding: $primary-padding-top-bottom $mobile-padding-left-right;
+    padding: $padding-top-bottom $mobile-padding-left-right;
   }
 }
