--- a/src/components/navigation/navigationMenuMobile.module.css
+++ b/src/components/navigation/navigationMenuMobile.module.css
@@ -19,29 +19,34 @@
   position: relative;
   width: 100%;
   height: 100%;
+  opacity: 1;
+
+  & :global(.slide-enter-active) {
+    opacity: 1;
+    transition: all 2s ease-out;
+  }
+
+  & :global(.slide-leave-active) {
+    opacity: 0;
+    transition: all 2s ease-out;
+  }
+
+  & :global(.slide-enter-from, .slide-leave-to) {
+    color: yellow;
+  }
 }
 
 .menu-mobile {
+  position: absolute;
+  top: 0;
+  right: 0;
   z-index: $z-index-extra;
   width: 220px;
   height: 100vh;
   padding-top: 100px;
   background-color: $primary-background;
   box-shadow: $shadow-primary;
-}
-
-.menu-mobile-open {
-  position: absolute;
-  top: 0;
-  right: 0;
-  transition: 1s;
-}
-
-.menu-mobile-close {
-  position: absolute;
-  top: 0;
-  right: -220px;
-  transition: 1s;
+  opacity: 1;
 }
 
 .item-link {
@@ -86,10 +91,6 @@
   z-index: $z-index-default;
   background-color: $primary-color;
   opacity: 0.4;
-}
-
-.opacity-block-hide {
-  display: none;
 }
 
 .navigation {
