--- a/src/pages/ArticlesPage/components/article/articleBlock.module.css
+++ b/src/pages/ArticlesPage/components/article/articleBlock.module.css
@@ -1,11 +1,12 @@
 @import "/src/styles/variables.modules.css";
 
-.company-card {
+.article {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
   padding: 24px;
+  cursor: pointer;
   background: $third-background;
   border-radius: 8px;
 }
@@ -18,45 +19,25 @@
   color: $primary-text-color;
 }
 
-.sub-title {
-  flex: 1 1 auto;
-  margin-bottom: 32px;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 20px;
-  color: $primary-text-color;
-}
-
-.wrapper {
+.description {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.address {
-  padding-right: 8px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 16px;
+.wrapper {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  color: $primary-btn-hover-color;
+}
+
+.publication-date {
   color: $secondary-text-color;
 }
 
-.offers {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.text {
-  padding-right: 16px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 16px;
-  color: #4a53f5;
-}
-
-@media screen and (max-width: $breakpoint-extra-small) {
-  .wrapper {
+@media screen and (max-width: $breakpoint-extra-large) {
+  .description {
     display: flex;
     flex-direction: column;
     gap: 4px;
