--- a/src/pages/productsPage/components/productCard/productCard.module.css
+++ b/src/pages/productsPage/components/productCard/productCard.module.css
@@ -21,7 +21,7 @@
 .details {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 16px;
+  gap: 4px;
 }
 
 .row {
@@ -55,7 +55,6 @@
 .text {
   display: flex;
   align-items: center;
-  padding: 4px;
 }
 
 @media screen  and (max-width: $breakpoint-large) {
@@ -63,6 +62,13 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 16px;
+  }
+}
+
+@media screen  and (max-width: $breakpoint-small) {
+  .details {
+    grid-template-columns: 1fr;
+    gap: 4px;
   }
 }
 
